<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">

    <ImageView
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/select_date"
        android:padding="@dimen/_4sdp"
        app:srcCompat="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/datePicker"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/datePicker"
        app:layout_constraintTop_toTopOf="@+id/datePicker"
        tools:text="03 Jan 2020" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="?colorOnBackground"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/datePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/datePicker" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/global_report"
        android:textColor="@color/colorOnBackground"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/lastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/last_updated"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recoveries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/deaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/recoveredIcon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/report_indicator"
                android:src="@drawable/indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/forest_green" />

            <TextView
                android:id="@+id/recoveredTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/recovered"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/recoveredIcon"
                app:layout_constraintStart_toEndOf="@+id/recoveredIcon"
                app:layout_constraintTop_toTopOf="@+id/recoveredIcon" />

            <TextView
                android:id="@+id/totalRecoveries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="?colorOnBackground"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/recoveredIcon"
                app:layout_constraintTop_toBottomOf="@+id/recoveredIcon"
                tools:text="74,789" />

            <TextView
                android:id="@+id/newRecoveries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintBottom_toBottomOf="@+id/totalRecoveries"
                app:layout_constraintStart_toEndOf="@+id/totalRecoveries"
                app:layout_constraintTop_toTopOf="@+id/totalRecoveries"
                tools:text="(68)" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/deaths"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/recoveries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/recoveries"
        app:layout_constraintTop_toTopOf="@+id/recoveries">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/indicator"
                android:contentDescription="@string/report_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/deathsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/deaths"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/totalDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="?colorOnBackground"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:text="74,789" />

            <TextView
                android:id="@+id/newDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintBottom_toBottomOf="@+id/totalDeaths"
                app:layout_constraintStart_toEndOf="@+id/totalDeaths"
                app:layout_constraintTop_toTopOf="@+id/totalDeaths"
                tools:text="(68)" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/deaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/recoveries"
        app:layout_constraintTop_toBottomOf="@+id/recoveries">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/confirmedIcon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/report_indicator"
                android:src="@drawable/indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/royal_blue" />

            <TextView
                android:id="@+id/activeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/active"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/confirmedIcon"
                app:layout_constraintStart_toEndOf="@+id/confirmedIcon"
                app:layout_constraintTop_toTopOf="@+id/confirmedIcon" />

            <TextView
                android:id="@+id/totalActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="?colorOnBackground"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/confirmedIcon"
                app:layout_constraintTop_toBottomOf="@+id/confirmedIcon"
                tools:text="74,789" />

            <TextView
                android:id="@+id/critical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintBottom_toBottomOf="@+id/totalActive"
                app:layout_constraintStart_toEndOf="@+id/totalActive"
                app:layout_constraintTop_toTopOf="@+id/totalActive"
                tools:text="(68)" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/confirmed"
        app:layout_constraintEnd_toEndOf="@+id/deaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/confirmed"
        app:layout_constraintTop_toTopOf="@+id/confirmed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/totalIcon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/report_indicator"
                android:src="@drawable/indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/grey" />

            <TextView
                android:id="@+id/totalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cases"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/totalIcon"
                app:layout_constraintStart_toEndOf="@+id/totalIcon"
                app:layout_constraintTop_toTopOf="@+id/totalIcon" />

            <TextView
                android:id="@+id/totalCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="?colorOnBackground"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/totalIcon"
                app:layout_constraintTop_toBottomOf="@+id/totalIcon"
                tools:text="74,789" />

            <TextView
                android:id="@+id/newCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintBottom_toBottomOf="@+id/totalCases"
                app:layout_constraintStart_toEndOf="@+id/totalCases"
                app:layout_constraintTop_toTopOf="@+id/totalCases"
                tools:text="(68)" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/countries"
        android:textColor="?colorOnBackground"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/total" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_report">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refreshData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_desc"
        android:textAllCaps="false"
        app:srcCompat="@drawable/ic_baseline_refresh_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>